[package]
name = "net2"
version = "0.1.0"
authors = ["luozijun <luozijun.assistant@protonmail.com>"]

[dependencies]
log = "0.4"
cfg-if = "0.1"
bitflags = "1.0"
byteorder = "1.2.1"

[dependencies.smoltcp]
git = "https://github.com/m-labs/smoltcp.git"
branch = "master"
default-features = false
features = [
    "std", "log",
    "proto-ipv4", "proto-ipv6",
    "socket-raw", "socket-icmp", "socket-udp", "socket-tcp"
]

[target.'cfg(unix)'.dependencies]
libc = "0.2"
nix = "0.11.0"

[target.'cfg(target_os = "macos")'.dependencies]
pfctl = "0.2"
core-foundation = "0.6"
system-configuration = "0.2"
